# smart-screen

./: .gitignore  build.sh
app/: CMakeLists.txt
app/ui/: page_city_setting.c  page_conf.c  page_connect_loading.c  page_main.c  page_main.h  page_shortcutkey.c  page_sleep.c  page_time_setting.c
app/ui/data/: device_data.c  device_data.h
app/ui/utils/: utils.c  utils.h
app/ui/utils/file/: file_save.c
component/net/: CMakeLists.txt  http_manager.c  http_manager.h
platform/t113/: t113.cmake
platform/t113/lib/: libcrypto.so.1.1  libwolfssl.so.5  libwolfssl.so.5.1.1.99a5b54a
